Fix alignment issue

--- a/app/assets/stylesheets/expenses/_dashboard.scss
+++ b/app/assets/stylesheets/expenses/_dashboard.scss
@@ -158,7 +158,7 @@
 .expense-stale {
   float: right;
   font-size: 0.5em;
-  margin: 5px 5px 0 0;
+  margin-top: 5px;
   padding: 2px 5px;
 
   @media (max-width: 1100px) {
